# cpython-near-wasm-opt

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
src/cpython_near_wasm_opt/: __init__.py  cli.py  core.py
