[build-system]
requires = ["setuptools>=61.0", "wheel", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "cpython-near-wasm-opt"
version = "0.8.5"
description = "CPython-NEAR WASM optimizer tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["wasmtime", "lz4"]

[project.urls]
"Homepage" = "https://github.com/past-hypothesis/cpython-near-wasm-opt"
"Bug Tracker" = "https://github.com/past-hypothesis/cpython-near-wasm-opt/issues"

[project.scripts]
cpython-near-wasm-opt = "cpython_near_wasm_opt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cpython_near_wasm_optimizer = ["bin/**/*", "lib/**/*"]
